# CPURenderer

./: .gitignore  CMakeLists.txt  LICENSE
Dependencies/assimp/lib/cmake/assimp-6.0/: assimpTargets.cmake
Dependencies/assimp/lib/pkgconfig/: assimp.pc
Dependencies/imgui/: CMakeLists.txt
Dependencies/spdlog/lib/cmake/spdlog/: spdlogConfigTargets-release.cmake  spdlogConfigTargets.cmake
Dependencies/spdlog/lib/pkgconfig/: spdlog.pc
resources/assets/models/: capybara.fbx
src/: App.cpp  App.h  Camera.cpp  Camera.h  ComponentMetadataSetup.h  ComponentReflection.h  FieldMetadata.h  Gizmos.cpp  Gizmos.h  Graphics.cpp  Graphics.h  Log.cpp  Log.h  MaterialPropertyInspector.h  MeshLoader.cpp  MeshLoader.h  MetaInspector.h  MetaReflection.h  Model.cpp  Model.h  PFRInspector.h  Primitives.cpp  Primitives.h  Scene.cpp  Scene.h  Texture2D.h  main.cpp
src/ecs/components/: CameraComponent.h  Hierarchy.h  Light.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.h  NameTag.h  Transform.cpp  Transform.h
src/ecs/systems/: RenderingSystem.cpp  RenderingSystem.h  TransformSystem.cpp  TransformSystem.h
src/render/: Context.cpp  Context.h  EffectiveMaterial.h  IShader.h  Material.h  MaterialManager.h  RenderPipeline.cpp  RenderPipeline.h  RenderingSystem.cpp  RenderingSystem.h  ShaderManager.h  ShaderUniforms.h  Window.cpp  Window.h
src/render/shader/: BlinnPhongShader.h  PBRShader.h  UnlitShader.h
src/ui/: ImGuiPalette.cpp  ImGuiPalette.h  ImGuiTheme.cpp  ImGuiTheme.h
